# zoe-pilot-sdk

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: pilot-guide.md
examples/: 01_basic_evaluation.py
tests/: test_client.py  test_models.py
zoe_sdk/: __init__.py  auth.py  client.py  models.py
